FIX: Slider position and button visibility

--- a/src/main/resources/static/css/superslides.css
+++ b/src/main/resources/static/css/superslides.css
@@ -1,9 +1,9 @@
 #slides {
   position: absolute;
-  top: -55px;
+  top: -32px;
 }
 
-@media only screen and (max-width: 991px) {
+@media only screen and (max-width: 500px) {
   #slides {
     top: 0px;
   }
